update customer_relationship_management date
On the first line of a markdown

--- a/customer_relationship_management.ipynb
+++ b/customer_relationship_management.ipynb
@@ -5,7 +5,7 @@
    "id": "5cbbf384",
    "metadata": {},
    "source": [
-    "**August 5th, 2025 at 10:45 AM**"
+    "**Monday May 5, 2025 at 10:45 AM**"
    ]
   },
   {
